--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Skillet Lasagna</a>
+        <ul>
+            <li><a href="recipes/lasagna.html">Skillet Lasagna</a></li>
+            <li><a href="recipes/Filipino-Corned-Beef.html">Filipino-Corned-Beef</a></li>
+        </ul>
     </body>
 </html>
