--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="recipes/lasagna.html">Skillet Lasagna</a></li>
             <li><a href="recipes/Filipino-Corned-Beef.html">Filipino-Corned-Beef</a></li>
+            <li><a href="recipes/Maple-French-Toast-Sandwich.html">Maple-French-Toast-Sandwich</a></li>
         </ul>
     </body>
 </html>
